tdf#107087: Select bitmap fill from preset list

Also remove member variable that is used just once

Change-Id: I369299aed75a3b44048aa09ba86b79e552cf6d14